--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "asunto-vertailu",
   "version": "0.1.0",
+  "engines": {
+    "npm": "16.x"
+  },
   "private": true,
   "dependencies": {
     "@semantic-ui-react/css-patch": "^1.0.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "express": "^4.18.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
